--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
     <shedlock.version>4.23.0</shedlock.version>
     <slf4j.version>1.7.32</slf4j.version>
     <log4j2.version>2.16.0</log4j2.version> 
+    <h2.version>2.0.202</h2.version>
     <!-- plugins -->
     <plugin.checkstyle.version>3.1.2</plugin.checkstyle.version>
     <plugin.sonar.version>3.6.1.1688</plugin.sonar.version>
