--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,8 @@
     <!-- dependencies -->
     <dgclib.version>1.1.10</dgclib.version>
     <owasp.version>6.5.3</owasp.version>
-    <spring.boot.version>2.6.2</spring.boot.version>
+    <spring.boot.version>2.6.3</spring.boot.version>
+    <hibernate.version>5.6.5.Final</hibernate.version>
     <spring.test.version>5.3.12</spring.test.version>
     <spring.security.version>5.6.0</spring.security.version>
     <lombok.version>1.18.22</lombok.version>
@@ -141,6 +142,17 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-core</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>${hibernate.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
