--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.6.8</version>
+    <relativePath/> <!-- lookup parent from repository -->
+  </parent>
 
   <groupId>eu.europa.ec.dgc</groupId>
   <artifactId>dgca-issuance-service</artifactId>
@@ -24,18 +30,18 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <!-- dependencies -->
-    <dgclib.version>1.1.10</dgclib.version>
+    <dgclib.version>1.3.1</dgclib.version>
     <owasp.version>6.5.3</owasp.version>
-    <spring.boot.version>2.6.7</spring.boot.version>
+    <spring.boot.version>2.6.8</spring.boot.version>
     <spring.test.version>5.3.19</spring.test.version>
-    <spring.security.version>5.6.2</spring.security.version>
+    <spring.security.version>5.7.1</spring.security.version>
     <hibernate.version>5.6.5.Final</hibernate.version>
    <lombok.version>1.18.22</lombok.version>
     <liquibase.version>4.9.1</liquibase.version>
     <hcert-kotlin.version>1.2.0</hcert-kotlin.version>
     <kotlin.version>1.6.21</kotlin.version>
     <springdoc.version>1.6.7</springdoc.version>
-    <junit.version>5.8.1</junit.version>
+    <junit.version>5.8.2</junit.version>
     <mapstruct.version>1.4.2.Final</mapstruct.version>
     <mockito.version>4.1.0</mockito.version>
     <bcpkix.version>1.70</bcpkix.version>
@@ -43,7 +49,7 @@
     <shedlock.version>4.30.0</shedlock.version>
     <sap.cloud.sdk.version>3.60.0</sap.cloud.sdk.version>
     <slf4j.version>1.7.32</slf4j.version>
-    <h2.version>2.1.210</h2.version>
+    <h2.version>2.1.212</h2.version>
     <!-- plugins -->
     <plugin.checkstyle.version>3.1.2</plugin.checkstyle.version>
     <plugin.sonar.version>3.6.1.1688</plugin.sonar.version>
@@ -131,6 +137,10 @@
   </dependencyManagement>
   <dependencies>
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+    </dependency>
+    <dependency>
       <groupId>eu.europa.ec.dgc</groupId>
       <artifactId>dgc-lib</artifactId>
       <version>${dgclib.version}</version>
@@ -181,15 +191,17 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>org.junit.vintage</groupId>
-      <artifactId>junit-vintage-engine</artifactId>
-      <version>5.7.0</version>
-    </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.junit.vintage</groupId>
+          <artifactId>junit-vintage-engine</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
