--- a/pom.xml
+++ b/pom.xml
@@ -31,12 +31,13 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <!-- dependencies -->
     <dgclib.version>1.3.1</dgclib.version>
-    <owasp.version>6.5.3</owasp.version>
-    <spring.boot.version>2.6.8</spring.boot.version>
-    <spring.test.version>5.3.19</spring.test.version>
+    <owasp.version>7.1.1</owasp.version>
+    <spring.boot.version>2.7.1</spring.boot.version>
+    <spring.cloud.version>2021.0.3</spring.cloud.version>
+    <spring.test.version>5.3.22</spring.test.version>
     <spring.security.version>5.7.1</spring.security.version>
     <hibernate.version>5.6.5.Final</hibernate.version>
-   <lombok.version>1.18.22</lombok.version>
+    <lombok.version>1.18.24</lombok.version>
     <liquibase.version>4.9.1</liquibase.version>
     <hcert-kotlin.version>1.2.0</hcert-kotlin.version>
     <kotlin.version>1.6.21</kotlin.version>
@@ -103,6 +104,13 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
         <version>${spring.boot.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring.cloud.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -184,6 +192,14 @@
     <dependency>
       <groupId>org.liquibase</groupId>
       <artifactId>liquibase-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-bootstrap</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-vault-config</artifactId>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
