--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
     <okhttp.version>4.9.2</okhttp.version>
     <shedlock.version>4.30.0</shedlock.version>
     <sap.cloud.sdk.version>3.60.0</sap.cloud.sdk.version>
+    <openhim.version>4.0.0</openhim.version>
     <slf4j.version>1.7.32</slf4j.version>
     <h2.version>2.1.212</h2.version>
     <!-- plugins -->
@@ -200,6 +201,11 @@
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-vault-config</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.openhim</groupId>
+      <artifactId>mediator-engine</artifactId>
+      <version>${openhim.version}</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
